--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,6 @@
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
+/.styleci.yml       export-ignore
 /phpunit.xml.dist   export-ignore
 /tests              export-ignore
