--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,6 @@
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
 /.styleci.yml       export-ignore
+/.editorconfig      export-ignore
 /phpunit.xml.dist   export-ignore
 /tests              export-ignore
