--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "laravel/framework": "^5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
