--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/framework": "^5.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^7.0",
+        "orchestra/testbench": "~3.5"
     },
     "autoload": {
         "psr-4": {
@@ -29,7 +30,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Appstract\\BladeDirectives\\Test\\": "tests"
+            "Appstract\\BladeDirectives\\Test\\": "tests",
+            "Appstract\\BladeDirectives\\Test\\App\\": "tests/laravel/app"
         }
     },
     "scripts": {
