--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "laravel/framework": "^5.5"
+        "laravel/framework": "^5.5|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
