--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "laravel/framework": "^5.5|^6.0"
+        "php": "^7.1.3",
+        "laravel/framework": "^5.7|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
-        "orchestra/testbench": "~3.5"
+        "orchestra/testbench": "~3.7|^4.0"
     },
     "autoload": {
         "psr-4": {
