--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "laravel/framework": "^5.7|^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
-        "orchestra/testbench": "~3.7|^4.0"
+        "orchestra/testbench": "~3.7|^4.0",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
