--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel/framework": "^5.7|^6.0"
+        "laravel/framework": "^5.7|^6.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
