--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ php:
   - 7.4
 
 env:
-  matrix:
-    - COMPOSER_FLAGS="--prefer-lowest"
-    - COMPOSER_FLAGS=""
+  - LARAVEL_VERSION=^5.7.*
+  - LARAVEL_VERSION=^5.8.*
+  - LARAVEL_VERSION=^6.0
+  - LARAVEL_VERSION=^7.0
 
 before_script:
   - travis_retry composer self-update
+  - composer require laravel/framework:${LARAVEL_VERSION}
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
 
 script:
