--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ php:
   - 7.4
 
 env:
-  - LARAVEL_VERSION=^5.7.*
-  - LARAVEL_VERSION=^5.8.*
+  - LARAVEL_VERSION=5.7.*
+  - LARAVEL_VERSION=5.8.*
   - LARAVEL_VERSION=^6.0
   - LARAVEL_VERSION=^7.0
 
