--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "laravel/framework": "^5.7|^6.0|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.7|^4.0",
+        "orchestra/testbench": "~3.7|^4.0"
     },
     "autoload": {
         "psr-4": {
