--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.1.3|^8.0",
-        "laravel/framework": "^5.7|^6.0|^7.0|^8.0|^9.0"
+        "php": ">=7.1.3",
+        "laravel/framework": ">=5.7"
     },
     "require-dev": {
         "orchestra/testbench": "~3.7|^4.0|^5.0|^6.0|^7.0"
